--- a/RepReady/Views/Comments/Edit.cshtml
+++ b/RepReady/Views/Comments/Edit.cshtml
@@ -1,9 +1,8 @@
 ﻿@model RepReady.Models.Comment
 
-<h2>Editare comentariu</h2>
-<br />
+<h2 class="text-center mb-4">Editare Comentariu</h2>
 
-<form asp-action="Edit" asp-controller="Comments" asp-route-id="@Model.Id" method="post">
+<form asp-action="Edit" asp-controller="Comments" asp-route-id="@Model.Id" method="post" class="comment-edit-form">
 
     <div class="form-group">
         <label asp-for="Content" class="form-label">Conținut comentariu</label>
@@ -14,7 +13,9 @@
 
     <br /><br />
 
-    <button class="btn btn-primary" type="submit">Editează comentariul</button>
+    <div class="form-group text-center">
+        <button class="btn btn-primary submit-btn" type="submit">Editează Comentariul</button>
+    </div>
 
 </form>
 
