--- a/RepReady/Views/Exercises/Edit.cshtml
+++ b/RepReady/Views/Exercises/Edit.cshtml
@@ -1,6 +1,5 @@
 ﻿@model RepReady.Models.Exercise
 
-<h2>Editare exercițiu</h2>
 
 @if (ViewBag.ErrorMessage != null)
 {
@@ -8,83 +7,96 @@
 }
 
 
-<form method="post" asp-action="Edit" asp-controller="Exercises" asp-route-id="@Model.Id">
-    <!-- Title -->
-    <div>
-        <label asp-for="Title" class="form-label">Titlu exercițiu</label><br />
-        <input asp-for="Title" value="@Model.Title" class="form-control" />
-        <span asp-validation-for="Title" class="text-danger"></span>
-    </div>
-    <br />
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-lg-6 col-md-8 col-sm-12">
+            <h2 class="text-center mb-4 text-primary">Editare exercițiu</h2>
 
-    <!-- Description -->
-    <div>
-        <label asp-for="Description" class="form-label">Descriere exercițiu</label><br />
-        <textarea asp-for="Description" class="form-control">@Model.Description</textarea>
-        <span asp-validation-for="Description" class="text-danger"></span>
-    </div>
-    <br />
+            <div class="card shadow-lg">
+                <div class="card-body">
+                    <form method="post" asp-action="Edit" asp-controller="Exercises" asp-route-id="@Model.Id">
+                        <div asp-validation-summary="All" class="alert alert-danger"></div>
+                        <!-- Title -->
+                        <div>
+                            <label asp-for="Title" class="form-label">Titlu exercițiu</label><br />
+                            <input asp-for="Title" value="@Model.Title" class="form-control" />
+                            <span asp-validation-for="Title" class="text-danger"></span>
+                        </div>
+                        <br />
 
-    <!-- Reps -->
-    <div>
-        <label asp-for="Reps" class="form-label">Număr de repetări</label><br />
-        <input asp-for="Reps" value="@Model.Reps" class="form-control" />
-        <span asp-validation-for="Reps" class="text-danger"></span>
-    </div>
-    <br />
+                        <!-- Description -->
+                        <div>
+                            <label asp-for="Description" class="form-label">Descriere exercițiu</label><br />
+                            <textarea asp-for="Description" class="form-control">@Model.Description</textarea>
+                            <span asp-validation-for="Description" class="text-danger"></span>
+                        </div>
+                        <br />
 
-    <!-- Sets -->
-    <div>
-        <label asp-for="Sets" class="form-label">Număr de seturi</label><br />
-        <input asp-for="Sets" value="@Model.Sets" class="form-control" />
-        <span asp-validation-for="Sets" class="text-danger"></span>
-    </div>
-    <br />
+                        <!-- Reps -->
+                        <div>
+                            <label asp-for="Reps" class="form-label">Număr de repetări</label><br />
+                            <input asp-for="Reps" value="@Model.Reps" class="form-control" />
+                            <span asp-validation-for="Reps" class="text-danger"></span>
+                        </div>
+                        <br />
 
-    <!-- Start Date -->
-    <div>
-        <label asp-for="Start" class="form-label">Data și ora de început</label><br />
-        <input asp-for="Start" value="@Model.Start.ToString("yyyy-MM-ddTHH:mm")" class="form-control" />
-        <span asp-validation-for="Start" class="text-danger"></span>
-    </div>
-    <br />
+                        <!-- Sets -->
+                        <div>
+                            <label asp-for="Sets" class="form-label">Număr de seturi</label><br />
+                            <input asp-for="Sets" value="@Model.Sets" class="form-control" />
+                            <span asp-validation-for="Sets" class="text-danger"></span>
+                        </div>
+                        <br />
 
-    <!-- Finish Date -->
-    <div>
-        <label asp-for="Finish" class="form-label">Data și ora de final</label><br />
-        <input asp-for="Finish" value="@Model.Finish.ToString("yyyy-MM-ddTHH:mm")" class="form-control" />
-        <span asp-validation-for="Finish" class="text-danger"></span>
-    </div>
-    <br />
+                        <!-- Start Date -->
+                        <div>
+                            <label asp-for="Start" class="form-label">Data și ora de început</label><br />
+                            <input asp-for="Start" value="@Model.Start.ToString("yyyy-MM-ddTHH:mm")" class="form-control" />
+                            <span asp-validation-for="Start" class="text-danger"></span>
+                        </div>
+                        <br />
+
+                        <!-- Finish Date -->
+                        <div>
+                            <label asp-for="Finish" class="form-label">Data și ora de final</label><br />
+                            <input asp-for="Finish" value="@Model.Finish.ToString("yyyy-MM-ddTHH:mm")" class="form-control" />
+                            <span asp-validation-for="Finish" class="text-danger"></span>
+                        </div>
+                        <br />
 
 
 
-    <!-- Edit users -->
-    <!-- Multiple choice users -->
-    <div class="form-group">
-        <label>Utilizatori</label><br />
+                        <!-- Edit users -->
+                        <!-- Multiple choice users -->
+                        <div class="form-group">
+                            <label>Utilizatori</label><br />
 
-        @foreach (var user in ViewBag.Users)
-        {
-            bool isChecked = ViewBag.SelectedUsers.Contains(user.Id);
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" name="UsersIdList" value="@user.Id" id="user_@user.Id" @(isChecked ? "checked" : "")  />
-                <label class="form-check-label" for="user_@user.Id">
-                    @user.UserName
-                </label>
-            </div>
-        }
+                            @foreach (var user in ViewBag.Users)
+                            {
+                                bool isChecked = ViewBag.SelectedUsers.Contains(user.Id);
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" name="UsersIdList" value="@user.Id" id="user_@user.Id" @(isChecked ? "checked" : "")  />
+                                    <label class="form-check-label" for="user_@user.Id">
+                                        @user.UserName
+                                    </label>
+                                </div>
+                            }
         
 
-        <!-- <span asp-validation-for="Users" class="text-danger"></span> -->
-    </div>
+                            <!-- <span asp-validation-for="Users" class="text-danger"></span> -->
+                        </div>
 
-    <!-- Workout Selection -->
-    <div class="form-group">
-        <input type="hidden" name="WorkoutId" value="@ViewBag.WorkoutId" />
-    </div>
-    <br />
+                        <!-- Workout Selection -->
+                        <div class="form-group">
+                            <input type="hidden" name="WorkoutId" value="@ViewBag.WorkoutId" />
+                        </div>
+                        <br />
 
-    <!-- Submit Button -->
-    <button type="submit" class="btn btn-success">Salveaza exercițiul</button>
-</form>
+                        <!-- Submit Button -->
+                        <button type="submit" class="btn btn-success">Salveaza exercițiul</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
