--- a/RepReady/Views/Shared/_Layout.cshtml
+++ b/RepReady/Views/Shared/_Layout.cshtml
@@ -45,11 +45,11 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <!--  <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - RepReady - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
+             &copy; 2024 - RepReady - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+         </div> 
+    </footer> -->
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
 
