--- a/RepReady/Views/Workouts/Edit.cshtml
+++ b/RepReady/Views/Workouts/Edit.cshtml
@@ -1,45 +1,44 @@
 ﻿@model RepReady.Models.Workout
-<h2 class="text-center mt-5">Editare antrenament</h2>
-<br />
 
 <div class="container mt-5">
-    <div class="row">
-        <div class="col-md-6 offset-3">
-            <form method="post" asp-action="Edit" asp-controller="Workouts" asp-route-id="@Model.Id">
-                <div asp-validation-summary="All" class="text-danger"></div>
-                <div class="form-group">
-                    <label asp-for="Name" class="form-label">Titlu Antrenament</label>
-                    <br />
-                    <input asp-for="Name" class="form-control" />
-                    <span asp-validation-for="Name" class="text-danger"></span>
-                    <br /><br />
+    <div class="row justify-content-center">
+        <div class="col-lg-6 col-md-8 col-sm-12">
+
+            <h2 class="text-center mb-4 text-primary">Editare Antrenament</h2>
+
+            <div class="card shadow-lg">
+                <div class="card-body">
+                    <form method="post" asp-action="Edit" asp-controller="Workouts" asp-route-id="@Model.Id">
+                        <div asp-validation-summary="All" class="alert alert-danger"></div>
+                        <div class="mb-4">
+                            <label asp-for="Name" class="form-label fw-bold">Titlu Antrenament</label>
+                            
+                            <input asp-for="Name" class="form-control" />
+                            <span asp-validation-for="Name" class="text-danger"></span>
+                        </div>
+                        <div class="mb-4">
+                            <label asp-for="Description" class="form-label fw-bold">Descriere Antrenament</label>
+                            <textarea asp-for="Description" class="form-control summernote"></textarea>
+                            <span asp-validation-for="Description" class="text-danger"></span>
+                        </div>
+                        <div class="mb-4">
+                            <label asp-for="Duration" class="form-label fw-bold">Durată Antrenament</label>
+                            <input asp-for="Duration" class="form-control" />
+                            <span asp-validation-for="Duration" class="text-danger"></span>
+                        </div>
+                        <div class="mb-4">
+                            <label for="CategoryId">Selectati categoria</label>
+                            <select asp-for="CategoryId" asp-items="Model.Categ" class="form-select">
+                                <option value="">Selectati categoria</option>
+                            </select>
+                            <span asp-validation-for="CategoryId" class="text-danger"></span>
+                        </div>
+                        <div class="text-center">
+                            <button class="btn btn-sm btn-success" type="submit">Modifica antrenament</button>
+                        </div>
+                    </form>
                 </div>
-                <div class="form-group">
-                    <label asp-for="Description" class="form-label">Descriere Antrenament</label>
-                    <br />
-                    <textarea asp-for="Description" class="form-control summernote"></textarea>
-                    <span asp-validation-for="Description" class="text-danger"></span>
-                    <br /><br />
-                </div>
-                <div class="form-group">
-                    <label asp-for="Duration" class="form-label">Durată Antrenament</label>
-                    <br />
-                    <input asp-for="Duration" class="form-control" />
-                    <span asp-validation-for="Duration" class="text-danger"></span>
-                    <br /><br />
-                </div>
-                <div class="form-group">
-                    <label for="CategoryId">Selectati categoria</label>
-                    <br />
-                    <select asp-for="CategoryId" asp-items="Model.Categ" class="form-control">
-                        <option value="">Selectati categoria</option>
-                    </select>
-                    <span asp-validation-for="CategoryId" class="text-danger"></span>
-                    <br />
-                </div>
-                <br />
-                <button class="btn btn-sm btn-success" type="submit">Modifica antrenament</button>
-            </form>
+            </div>
         </div>
     </div>
 </div>
